[gd_scene load_steps=2 format=3 uid="uid://coyyum46a86tp"]

[ext_resource type="Script" path="res://engine/gui/CharacterCreation.gd" id="1"]

[node name="CharacterCreation" type="Panel"]
self_modulate = Color(0.972656, 0.292557, 0.292557, 1)
offset_left = 1.0
offset_top = 1.0
offset_right = 392.0
offset_bottom = 268.0
script = ExtResource("1")

[node name="UnitChoice" type="OptionButton" parent="."]
layout_mode = 0
anchor_right = 0.5
offset_top = 26.0
offset_bottom = 46.0

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.85
anchor_right = 0.8
anchor_bottom = 0.96
offset_bottom = -0.159988
alignment = 1

[node name="CreateUnit" type="Button" parent="Buttons"]
layout_mode = 2
text = "Create"

[node name="Abort" type="Button" parent="Buttons"]
layout_mode = 2
text = "Abort"

[connection signal="pressed" from="Buttons/CreateUnit" to="." method="makeCharacter"]
[connection signal="pressed" from="Buttons/Abort" to="." method="queue_free" flags=6]
